ircv3_parse_derive/tests/ui/fail/not_implementation_nested_from_message_fail.rs
use ircv3_parse_derive::FromMessage;

struct Tag(String);

#[derive(FromMessage)]
struct A {
    tag: Option<Tag>,
}

fn main() {}
