ircv3_parse_derive/tests/ui/fail/not_implementation_nested_from_message_fail.stderr
error[E0599]: no function or associated item named `from_message` found for struct `Tag` in the current scope
 --> tests/ui/fail/not_implementation_nested_from_message_fail.rs:5:10
  |
3 | struct Tag(String);
  | ---------- function or associated item `from_message` not found for this struct
4 |
5 | #[derive(FromMessage)]
  |          ^^^^^^^^^^^ function or associated item not found in `Tag`
  |
  = help: items from traits can only be used if the trait is implemented and in scope
  = note: the following trait defines an item `from_message`, perhaps you need to implement it:
          candidate #1: `FromMessage`
  = note: this error originates in the derive macro `FromMessage` (in Nightly builds, run with -Z macro-backtrace for more info)
